--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,15 @@ services:
       - api
 
   api:
-    build: ./api
-    ports:
-      - "3000:3000"
-    environment:
-      MONGO_URI: mongodb://db:27017/mydatabase  # URL de conexión a MongoDB
-    depends_on:
-      - db
+  build: ./api
+  ports:
+    - "3000:3000"
+  environment:
+    MONGODB_HOST: localhost  # Nombre del servicio de MongoDB
+    PORT_DATABASE: 27017
+    NAME_DATABASE: mydatabase
+  depends_on:
+    - db
 
   db:
     image: mongo:5.0  # Usar la imagen oficial de MongoDB
@@ -24,9 +26,6 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db  # Persistencia de datos
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: password
 
 volumes:
   mongo_data:
