--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,27 @@ version: '3.8'
 
 services:
   frontend:
-    build: ./frontend
+    build: 
+      context: './frontend'
+      dockerfile: dockerfile
     ports:
       - "80:80"
+    networks:
+      - frontend
     depends_on:
       - api
 
   api:
-    build: ./api  # Ruta al Dockerfile de la API
-    container_name: api_container
+    build: 
+      context: './api'  # Ruta al Dockerfile de la API
+      dockerfile: dockerfile
     ports:
       - "3000:3000"  # Mapeo de puertos (host:contenedor)
     environment:
-      MONGO_URI: mongodb://root:password@localhost:27017/mydatabase  # URL de conexión a MongoDB
+      - NODE_ENV=production
+    env_file: ./api/.env
+    networks:
+      - backend
     depends_on:
       - db  # Depende del servicio de MongoDB
 
