--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14
-WORKDIR /app
-COPY package.json .
-RUN npm install
+WORKDIR /PracticaDocker/frontend/frontend
 COPY . .
+RUN npm install
+RUN npm run build
 EXPOSE 80
 CMD ["npm", "start"]
